--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "shorturl",
-  "version": "0.0.3",
-  "description": "API project for freeCodeCamp",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
-  },
-  "license": "MIT"
+    "type": "module",
+    "name": "shorturl",
+    "version": "0.0.3",
+    "description": "API project for freeCodeCamp",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "express": "^4.21.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vicentemferrer/url-shortener-microservice.git"
+    },
+    "homepage": "https://<project>.onrender.com/",
+    "author": "Vicente Ferrer",
+    "keywords": [
+        "node",
+        "express",
+        "freeCodeCamp"
+    ],
+    "license": "MIT"
 }
