Home And Styles

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "API project for freeCodeCamp",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "node --watch index.js"
     },
     "dependencies": {
         "body-parser": "^1.20.3",
